Fix spacing

--- a/stylesheets/homepage.css
+++ b/stylesheets/homepage.css
@@ -39,7 +39,6 @@ h3 {
 
 .logo {
   margin-top: 0;
-  margin-left: 0;
   text-align: center;
 }
 
